objects/Product_Sub_Category__c.object
<CustomObject>
    <description>This is the control list of Product Sub Categories per show</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Product Sub-Categories</relationshipLabel>
        <relationshipName>Product_Sub_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category_Code__c</fullName>
        <label>Product Sub-Category Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Product Sub-Categories</relationshipLabel>
        <relationshipName>Product_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Sub-Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sub-Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>